syntax = "proto3";
package protocol;

option go_package = "github.com/zllovesuki/G14Manager/rpc/protocol";

import "google/protobuf/empty.proto";

service Features {
  rpc GetCurrentFeatures(google.protobuf.Empty) returns (FeaturesResponse) {}
  rpc UpdateFeatures(UpdateFeaturesRequest) returns (FeaturesResponse) {}
}

message AutoThermal {
  bool Enabled = 1;
  string PluggedInProfile = 2;
  string UnpluggedProfile = 3;
}

message Feature {
  AutoThermal AutoThermal = 1;
  map<uint32, uint32> FnRemap = 2;

  repeated string RogRemap = 10;
}

message UpdateFeaturesRequest { Feature Feature = 1; }

message FeaturesResponse {
  bool Success = 1;
  Feature Feature = 2;

  string Message = 10;
}